force-app/main/default/objects/LocationSites__c/LocationSites__c.object-meta.xml
<CustomObject>
    <description>Add the Location</description>
    <label>Location Site</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>