force-app/main/default/objects/LocationSites__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Name + &quot;, &quot; +  TEXT(City__c) + &quot; &quot; +  TEXT(State__c) + &quot;, &quot; +  ZIPPostal_Code__c + &quot;, &quot; +  Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>