force-app/main/default/objects/LocationSites__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Combines all address components into a single formatted address</description>
    <formula>Name &amp; &quot;, &quot; &amp; 
TEXT(City__c) &amp; &quot;, &quot; &amp; 
TEXT(State__c) &amp; &quot; &quot; &amp; 
ZIPPostal_Code__c &amp; 
IF(NOT(ISBLANK(Country__c)), &quot; (&quot; &amp; Country__c &amp; &quot; County)&quot;, &quot;&quot;)</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>