force-app/main/default/objects/LocationSites__c/fields/Nearby_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Nearby_Hospital__c</fullName>
    <label>Nearby Hospital</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>