force-app/main/default/objects/LocationSites__c/fields/Parks_and_Recreation__c.field-meta.xml
<CustomField>
    <fullName>Parks_and_Recreation__c</fullName>
    <label>Parks and Recreation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>