force-app/main/default/objects/LocationSites__c/fields/SafeCrime_Rating__c.field-meta.xml
<CustomField>
    <fullName>SafeCrime_Rating__c</fullName>
    <label>Safe/Crime Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Very Safe</fullName>
            </value>
            <value>
                <fullName>Safe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>