force-app/main/default/objects/LocationSites__c/fields/Safety_Score__c.field-meta.xml
<CustomField>
    <fullName>Safety_Score__c</fullName>
    <formula>CASE(
  TEXT(SafeCrime_Rating__c),
  &quot;Very Safe&quot;, 5,
  &quot;Safe&quot;, 4,
  &quot;Moderate&quot;, 3,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>