force-app/main/default/objects/LocationSites__c/fields/ZIPPostal_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIPPostal_Code__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>