force-app/main/default/objects/LocationSites__c/validationRules/Required_Location_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Location_Fields</fullName>
    <active>true</active>
    <description>Ensures all critical location fields are populated</description>
    <errorConditionFormula>OR(ISBLANK(TEXT(City__c)),
			ISBLANK(TEXT(State__c)), 
			ISBLANK(Country__c))</errorConditionFormula>
    <errorMessage>Name, City, State, and County are required fields</errorMessage>
</ValidationRule>