force-app/main/default/objects/LocationSites__c/validationRules/Walkability_Score_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Walkability_Score_Range_Validation</fullName>
    <active>true</active>
    <description>Ensures walkability score is between 1-100</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Walkability_Score_1_100__c)),
  OR(
    Walkability_Score_1_100__c &lt; 1,
    Walkability_Score_1_100__c &gt; 100
  )
)</errorConditionFormula>
    <errorDisplayField>Walkability_Score_1_100__c</errorDisplayField>
    <errorMessage>Walkability Score must be between 1 and 100</errorMessage>
</ValidationRule>